--- a/style.css
+++ b/style.css
@@ -6,19 +6,24 @@ header {
     padding: 50px;
     text-align: center;
     font-size: 2em;
-    position: sticky;
     top: 0;
     z-index: 100;
     transition: padding 0.3s;
 }
 
 body {
-    min-height: 100vh;
-    margin: 0;
     align-items: center;
     justify-content: center;
      background-color: #347355;
-}
+        margin: 0;
+        padding: 0;
+        max-width: 365px; /* Maximale breedte */
+        max-height: 667px; /* Maximale lengte */
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+
 main {
     max-height: calc(100vh - 120px); /* 120px is de geschatte hoogte van header + footer */
     overflow-y: auto;
@@ -40,6 +45,12 @@ p{
  font-size: -1em;
  color: #223240;
 
+}
+
+.tekst1{
+padding:  10%;
+color: #223240;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #image-container {
@@ -96,10 +107,10 @@ footer {
     align-items: center;
     background-color: #223240;
     color: white;
-    padding: 10px;
+width:365px ;
     position: fixed;
     bottom: 0;
-    width: 100%;
+
 }
 
 footer a {
